# ModernAppFrontendTemplate

./: .env.test  CLAUDE.md  README.md  backend  copier.yml  pyproject.toml  regen.sh
template/: .env.example  Dockerfile.jinja  Jenkinsfile.jinja  eslint.config.js  index.html.jinja  nginx.conf.jinja  package.json.jinja  vite.config.ts.jinja
template/snippets/: proxy.conf
template/src/: app-theme.css  index.css
template/src/contexts/: sse-context-provider.tsx  toast-context-provider.tsx
template/src/hooks/: use-sse-task.ts
template/src/lib/: consts.ts.jinja
template/src/providers/: index.tsx.jinja
template/src/routes/: __root.tsx.jinja
template/src/styles/: button.ts
template/src/types/: playwright-binding.d.ts
template/tests/support/: fixtures-infrastructure.ts.jinja  fixtures.ts  global-setup.ts  selectors-domain.ts
test-app/: .copier-answers.yml  Dockerfile  Jenkinsfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite-proxy-extensions.ts  vite.config.ts
test-app-domain/openapi-cache/: openapi.json
test-app-domain/src/lib/: consts.ts
test-app-domain/src/routes/: about.tsx  index.tsx
test-app-domain/src/styles/: app-theme.css
test-app-domain/tests/support/: selectors-domain.ts
test-app/src/contexts/: sse-context-base.ts  toast-context-base.ts
test-app/src/hooks/: use-version-sse.ts
test-app/src/lib/: consts.ts
test-app/src/routes/: __root.tsx
test-app/src/workers/: sse-worker.ts
test-app/tests/support/: backend-url.ts  fixtures-infrastructure.ts  fixtures.ts  global-setup.ts
tests/e2e/auth/: auth.spec.ts
(+44 files in other folders)
